--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,4 @@ django-basic-auth-ip-whitelist==0.2.1
 redis==2.10.6
 wagtail-orderable==1.0.2
 lxml==4.5.0
+django-phonenumber-field[phonenumbers]==4.0.0
