--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,4 @@ scout-apm==2.0.2
 django-basic-auth-ip-whitelist==0.2.1
 redis==2.10.6
 wagtail-orderable==1.0.2
+django-phonenumber-field[phonenumbers]==4.0.0
