--- a/rca/project_styleguide/templates/patterns/pages/project/project_listing.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/project/project_listing.yaml
@@ -13,9 +13,10 @@ context:
         - { title: Subject, href: '#' }
         - { title: Theme, href: '#' }
     feature:
-      sub_heading: Electronic Skin Nanopatches for Continuous Blood Pressure Monitoring
+      sub_heading: School of Design
+      meta_heading: Electronic Skin Nanopatches for Continuous Blood Pressure Monitoring
       page_summary: Generating new technologies, knowledge and understanding, critical for moving invention in wearable technology forward.
-      page_link_url: '#'
+      href: '#'
     results:
       - {
           school: 'School of Arts & Humanities',
