Project detail visual updates

--- a/rca/project_styleguide/templates/patterns/organisms/people-module/people-module.yaml
+++ b/rca/project_styleguide/templates/patterns/organisms/people-module/people-module.yaml
@@ -1,8 +1,7 @@
 context:
   title: Staff
   page:
-    staff_link: '#'
-    staff_link_text: See all staff
+    staff_link: false
   people:
     - {
         name: 'Beth Hughes',
