--- a/rca/project_styleguide/templates/patterns/molecules/card/card.yaml
+++ b/rca/project_styleguide/templates/patterns/molecules/card/card.yaml
@@ -2,7 +2,7 @@ context:
   item:
     meta: 'Event'
     title: 'Show 2019: School of Architecture'
-    description: '28-29 April'
+    description: '28&#8211;29 April'
     image: true
     link: '#'
     person:
