Missing relationships for taxonomies and pages

--- a/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--project.yaml
+++ b/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--project.yaml
@@ -1,13 +1,16 @@
 context:
   page:
     funding: £5m, Research Council
-    key_details_tags:
-      - { tag: School of Design }
-      - { tag: Studio project }
-      - { tag: 2018 }
     specification_document: Archictecture MA
   subjects:
     - { title: Product design, link: '#' }
     - { title: Fashion, link: '#' }
     - { title: Innovation, link: '#' }
     - { title: Textiles, link: '#' }
+  taxonomy_tags:
+    - item:
+      title: School of Design
+    - item:
+      title: Studio project
+    - item:
+      title: 2018
