--- a/rca/project_styleguide/templates/patterns/pages/programmes/programme_detail.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/programmes/programme_detail.yaml
@@ -5,6 +5,9 @@ context:
     programme_description_title: 'We inspire design innovation'
     programme_description_subtitle: 'Extend your knowledge, skills and creativity through research and experimentation.'
     programme_description_copy: '<p>The programme conceives of architecture as a diverse and complex set of practices that move beyond traditional distinctions and limits in the field. The programme expands the possibilities of architecture and its agency in the world by encouraging an independent and critical ethos among its students.</p>'
+    get_ancestors:
+      - is_root: false
+        title: Degree programmes
     programme_gallery_title: 'Architecture gallery'
     programme_gallery:
       - slide:
