--- a/rca/project_styleguide/templates/patterns/pages/researchcentre/research_centre.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/researchcentre/research_centre.yaml
@@ -1,9 +1,13 @@
 context:
   page:
-    breadcrumb:
-      - { label: 'Research', link: /research/ }
-      - { label: 'Research Centres', link: /research/centres }
     title: The Helen Hamlyn Centre for Design
+    get_ancestors:
+      - is_root: false
+        depth: 2
+        title: Research
+      - is_root: false
+        depth: 3
+        title: Research Centres
     centre_image: true
     centre_image_caption: Watch the course introduction
     centre_description: 'The Helen Hamlyn Centre for Design at the Royal College of Art undertakes design research. Our team of dedicated researchers work on projects that save lives.'
