--- a/rca/project_styleguide/templates/patterns/pages/shortcourses/short_course.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/shortcourses/short_course.yaml
@@ -1,5 +1,13 @@
 context:
   page:
+    title: Design Thinking & Innovation
+    get_ancestors:
+      - is_root: false
+        depth: 2
+        title: Short courses
+      - is_root: false
+        depth: 3
+        title: Executive education
     quote_carousel:
       - slide:
         value:
@@ -20,13 +28,6 @@ context:
       body: '<p>Please be sure to read our <a href="http://facebook.com">Terms &amp; Conditions</a> before applying.</p>'
     frequently_asked_questions:
       body: '<p>For more information, please visit our <a href="https://google.com">FAQs</a> before applying.</p>'
-    breadcrumb:
-      - { label: 'Short courses', link: /short-courses/ }
-      - {
-          label: 'Executive education',
-          link: /short-courses/executive-education,
-        }
-    title: Design Thinking & Innovation
     video_caption: Watch the course introduction
     introduction_image: True
     introduction: 'Understand the purpose of design thinking in promoting innovation and learn real-world applications and strategies for design thinking.'
