--- a/rca/project_styleguide/templates/patterns/pages/guide/guide.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/guide/guide.yaml
@@ -15,10 +15,11 @@ context:
     last_published_at: !!timestamp '2020-05-13 2:00:00'
   anchor_nav:
     - { title: Introduction, link: '#introduction' }
-    - { title: Article 1, link: '#article-one' }
-    - { title: Article 2, link: '#article-two' }
+    - { title: Article 1, link: '#article-1' }
+    - { title: Article 2, link: '#article-2' }
     - { title: Staff, link: '#staff' }
     - { title: Index module, link: '#index-module' }
+    - { title: Contact, link: '#contact' }
   related_pages:
     title: Index Module
     items:
