--- a/rca/project_styleguide/templates/patterns/pages/researchcentre/research_centre.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/researchcentre/research_centre.yaml
@@ -9,25 +9,6 @@ context:
     introduction: 'The Helen Hamlyn Centre for Design at the Royal College of Art undertakes design research. Our team of dedicated researchers work on projects that save lives.'
     video: 'https://www.youtube.com/watch?v=glIIF-kBXf0'
     about_page_link_text: 'About the Helen Hamlyn Centre'
-    research_highlights:
-      - slide:
-        meta: 'School of Design'
-        title: 'Extending the potential for the Digitally Printed Ceramic Surface'
-        description: 'Find out how a group of our MA students turned red mud into a range of striking pottery'
-        image: true
-        link: '#'
-      - slide:
-        meta: 'Alumni Story'
-        title: 'A place with a real focus on making'
-        description: 'Since graduating from the RCA, Holly Hendry’s site-responsive sculptures and installations have been exhibited at galleries in London, Liverpool, Manchester, Copenhagen and Berlin. '
-        image: true
-        link: '#'
-      - slide:
-        meta: 'Alumni Story'
-        title: 'Designing the imposible for NASA'
-        description: 'Creating world class experiences that started at the RCA'
-        image: true
-        link: '#'
     programmes:
       - item:
         title: false
@@ -76,15 +57,35 @@ context:
         person: false
     related_links:
       - item:
-        value: { text: 'Knowledge Exchange', href: '#' }
+        value: { text: 'Knowledge Exchange', href: 'http://www.bbc.co.uk' }
       - item:
-        value: { text: 'Custom Executive Education', href: '#' }
+        value:
+          { text: 'Custom Executive Education', href: 'http://www.bbc.co.uk' }
       - item:
-        value: { text: 'Innovation RCA', href: '#' }
-    staff_link: '/staff'
+        value: { text: 'Innovation RCA', href: 'http://www.bbc.co.uk' }
+    staff_link: false
     contact_image: true
     relatedcontent: true
     staff_title:
+  projects:
+    - slide:
+      meta: 'School of Design'
+      title: 'Extending the potential for the Digitally Printed Ceramic Surface'
+      description: 'Find out how a group of our MA students turned red mud into a range of striking pottery'
+      image: true
+      link: '#'
+    - slide:
+      meta: 'Alumni Story'
+      title: 'A place with a real focus on making'
+      description: 'Since graduating from the RCA, Holly Hendry’s site-responsive sculptures and installations have been exhibited at galleries in London, Liverpool, Manchester, Copenhagen and Berlin. '
+      image: true
+      link: '#'
+    - slide:
+      meta: 'Alumni Story'
+      title: 'Designing the imposible for NASA'
+      description: 'Creating world class experiences that started at the RCA'
+      image: true
+      link: '#'
   related_staff:
     - {
         name: 'Beth Hughes',
@@ -105,7 +106,7 @@ context:
     contact_text: Get in touch if you’d like to find out more or have any questions about working with the RCA.
     contact_title: Contact Us
     related_content_title: More opportunities to study at the RCA
-  projects:
+  research_spaces:
     - {
         title: 'Healthcare',
         link: '#',
